--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "strict_min_version": "57.0a1"
+      "strict_min_version": "58.0"
     }
   },
   "browser_action": {
